# analise-armas-criminalidade-br

./: .~lock.Proposta.odt#  Grafo_representacao.gephi  Proposta.odt  README.md  pyproject.toml  requirements.txt
rsc/datasets/: grafo_crimes.gexf  grafo_final.gexf  grafo_ocorrencias.gexf  grafo_populacao.gexf
rsc/datasets/Seguranca_publica/: indicadoressegurancapublicauf.xlsx
rsc/datasets/crimes_por_estado/: Crimes_brasil_uf.csv
rsc/datasets/ocorrencias/: OCORRENCIAS_2024.csv  municipios.csv
rsc/datasets/populacao/: POP2022_Brasil_e_UFs.xls  POP2022_Brasil_e_UFs.xltx
src/: FurtosDeArmas.py  OcorrenciasViolencia.py  Populacao.py  SegurancaPublica.py  visualizar.py
src/ModelagemGrafos/: grafoCrimes.py  grafoFinal.py  grafoOcorrencias.py  grafoPopulacao.py
