[tool.poetry]
name = "projeto - teoria dos grafos"
version = "0.0.1"
description = ""
authors = ["marcovins <marcosbelods@gmail.com>, ligiatht <ligiatht@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
bibgrafo = "^1.2.0"
networkx = "^3.3"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
chardet = "^5.2.0"
matplotlib = "^3.9.2"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
